Backport to Minecraft 1.21.1